# poc-rust-game-template

./: .gitignore  ARCHITECTURE.md  Cargo.toml  PROJECT_COMPLETE.md  PROJECT_STATUS.md  README.md  REQUIREMENTS.md  SUMMARY.md
client/: .gitignore  DEVELOPMENT.md  README.md  index.html  package.json  vite.config.ts
client/src/: engine.ts  input.ts  logger.ts  main.ts  network.ts  protocol.ts  renderer.ts
server/: Cargo.toml
server/src/: config.rs  game_loop.rs  game_state.rs  main.rs  network.rs
shared/: Cargo.toml
shared/src/: lib.rs  messages.rs  tests.rs  types.rs  upgrades.rs
