[workspace]
resolver = "2"
members = ["server", "shared"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }
# Web framework
axum = { version = "0.8", features = ["ws"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Unique identifiers
uuid = { version = "1.11", features = ["v4", "serde"] }
# Time handling
chrono = { version = "0.4", features = ["serde"] }
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Utilities
anyhow = "1.0"
thiserror = "2.0"
# Random number generation
rand = "0.8"
