[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rand.workspace = true

# Local dependencies
shared = { path = "../shared" }

# Additional server-specific
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
futures-util = "0.3"
